Fix DIN 1451 font loading with dynamic path detection
- Embed @font-face declarations dynamically via JavaScript
- Detect viewing context (published vs standalone) and use correct font paths
- Copy font files to doc/build/html/images/ during build
- Fonts now load correctly in both generated and published slides

--- a/topics/ecosystem/content.yaml
+++ b/topics/ecosystem/content.yaml
@@ -195,7 +195,7 @@
 - type: slide
   id: galaxyprojecttools-iuc-httpsg
   heading: ''
-  class: reduce70 center
+  class: center
   content: |-
     [galaxyproject/**tools-iuc** ](https://github.com/galaxyproject/tools-iuc)
 
@@ -218,7 +218,7 @@
 - type: slide
   id: tools-aside-more-repositories
   heading: Tools Aside - More Repositories
-  class: center reduce70
+  class: center
   content: "Other repositories with high quality tools:\n\n * [Bj\xF6rn Gr\xFCning's\
     \ repo](https://github.com/bgruening/galaxytools)\n * Peter Cock's repos:\n  \
     \ * [blast repo](https://github.com/peterjc/galaxy_blast)\n   * [pico repo](https://github.com/peterjc/pico_galaxy)\n\
