--- a/topics/production/content.yaml
+++ b/topics/production/content.yaml
@@ -7,7 +7,7 @@
 
     SQLite
 
-    Paste#http
+    gunicorn all-in-one
 
     Single process
 
@@ -22,7 +22,7 @@
 
     PostgreSQL
 
-    uWSGI / nginx
+    gunicorn for web process + webless workers + nginx proxy
 
     Multiple processes
 
@@ -44,18 +44,21 @@
 - type: slide
   id: nginx-or-apache
   heading: nginx (or Apache)
-  content: "- Optimized servers for serving static content\n- Reverse proxy to Galaxy\
-    \ application servers\n- Load balancing across multiple Galaxy processes\n- https://www.nginx.com/resources/wiki/\n\
-    - Configuration: `github.com/galaxyproject/usegalaxy-playbook` \u2192 `templates/nginx/usegalaxy.j2`"
+  content: |- 
+    - Optimized servers for serving static content
+    - Reverse proxy to Galaxy application servers
+    - Load balancing across multiple Galaxy processes
+    - https://www.nginx.com/resources/wiki/
+    - https://docs.galaxyproject.org/en/master/admin/nginx.html#proxying-galaxy-with-nginx
+    - Configuration: `github.com/galaxyproject/usegalaxy-playbook` -> `templates/nginx/usegalaxy.j2`
 - type: slide
-  id: uwsgi
-  heading: uWSGI
+  id: webless
+  heading: Webless
   content: |-
-    - Production-grade WSGI server
-    - Handles multiple Galaxy worker processes
-    - Better performance than development server
-    - Integrates well with nginx
-    - https://uwsgi-docs.readthedocs.io/
+    - Galaxy typically runs in Gunicorn - a production-grade ASGI server
+    - This is a great tool for both development and production but in production typically job running and workflow scheduling should happen outside a webserver
+    - https://docs.galaxyproject.org/en/master/admin/scaling.html#gunicorn-for-web-serving-and-webless-galaxy-applications-as-job-handlers
+    - https://training.galaxyproject.org/training-material/topics/admin/tutorials/ansible-galaxy/tutorial.html
 - type: slide
   id: multi-processes
   heading: Multi-processes
@@ -65,7 +68,7 @@
     Running multiple processes of Galaxy and separate processes for web handling
     and job processing works around this.
 
-    This used to be an important detail - but uWSGI makes things a lot easier.
+    This used to be an important detail - but gravity + gunicorn make things a lot easier.
 - type: slide
   id: cluster-support
   heading: Cluster Support
@@ -74,6 +77,11 @@
     ![Cluster Support](../../images/cluster_support.svg)
 
     Galaxy can submit jobs to various cluster managers (Slurm, PBS, SGE, etc.)
+
+    https://docs.galaxyproject.org/en/master/admin/cluster.html
+
+    https://training.galaxyproject.org/training-material/topics/admin/tutorials/connect-to-compute-cluster/tutorial.html
+
 - type: slide
   id: usegalaxyorg-web-architecture
   heading: usegalaxy.org Web Architecture
@@ -93,7 +101,6 @@
   content: |-
     - **Database**: Use PostgreSQL for production
     - **Web Server**: Use nginx or Apache as reverse proxy
-    - **Application Server**: Use uWSGI or gunicorn
     - **Processes**: Run multiple Galaxy processes
     - **Job Handling**: Separate job handlers from web workers
     - **Storage**: Use scalable object storage solutions
