--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,13 @@ images/*.mindmap.plantuml.txt
 images/*.mindmap.plantuml.svg
 images/*.plantuml.svg
 
+# Generated artifacts from Mermaid (regenerated on build)
+images/*.mermaid.svg
+
+# Node.js / npm
+node_modules/
+package-lock.json
+
 # IDE
 .vscode/
 .idea/
